# REST-GraphQL-gRPC

./: README.md
REST/Python/fast-api-tutorial/: docker-compose.yml  pyproject.toml
REST/Python/fast-api-tutorial/api/cruds/: task.py
REST/Python/fast-api-tutorial/api/models/: task.py
REST/Python/fast-api-tutorial/api/routers/: task.py
REST/Python/fast-api-tutorial/tests/: test_main.py
REST/Ruby/grape-on-rails-api/app/api/v1/entities/: book_entity.rb
REST/Ruby/grape-on-rails-api/config/: application.rb  cable.yml  credentials.yml.enc  database.yml
REST/Ruby/grape-on-rails-api/config/environments/: production.rb
REST/Ruby/grape-on-rails-api/db/: schema.rb
gRPC/Go/protos/: user.proto  user_grpc.pb.go
gRPC/Go/user_client/: main.go
gRPC/Go/user_server/: main.go
gRPC/Python/user/: client.py  server.py  user_pb2.py
grpc/go/protos/: user.pb.go
grpc/python/data/: users.json
grpc/python/protos/: user.proto
grpc/python/user/: user_pb2_grpc.py
rest/: go.sum  server.go
rest/go/: README.md  go.mod  server.go
rest/ruby/grape-on-rails-api/: Gemfile
rest/ruby/grape-on-rails-api/app/api/base/: api.rb
rest/ruby/grape-on-rails-api/app/api/v1/: authors.rb  books.rb
rest/ruby/grape-on-rails-api/app/api/v1/entities/: author_entity.rb
rest/ruby/grape-on-rails-api/app/models/: author.rb
rest/ruby/grape-on-rails-api/config/: routes.rb
rest/ruby/grape-on-rails-api/db/migrate/: 20210706033310_create_authors.rb  20210706033318_create_books.rb
